WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73836
AX: web search mechanism does not work with frames
https://bugs.webkit.org/show_bug.cgi?id=73836
Summary
AX: web search mechanism does not work with frames
chris fleizach
Reported
2011-12-05 09:12:13 PST
The searching mechanism built into WK does not search within frames and does not find frames when searching just for frames
Attachments
patch
(9.68 KB, patch)
2011-12-05 09:18 PST
,
chris fleizach
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-12-05 09:18:30 PST
Created
attachment 117888
[details]
patch
chris fleizach
Comment 2
2011-12-05 14:42:17 PST
http://trac.webkit.org/changeset/102049
Ryosuke Niwa
Comment 3
2011-12-07 11:59:33 PST
It seems like the test added by this patch is very crashy (~30%):
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=platform%2Fmac%2Faccessibility%2Fsearch-with-frames.html&group=%40ToT%20-%20webkit.org
chris fleizach
Comment 4
2011-12-07 12:01:29 PST
(In reply to
comment #3
)
> It seems like the test added by this patch is very crashy (~30%): > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=platform%2Fmac%2Faccessibility%2Fsearch-with-frames.html&group=%40ToT%20-%20webkit.org
can we get a crash log. this webpage is inscrutable
Ryosuke Niwa
Comment 5
2011-12-07 12:10:54 PST
(In reply to
comment #4
)
> (In reply to
comment #3
) > > It seems like the test added by this patch is very crashy (~30%): > > > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=platform%2Fmac%2Faccessibility%2Fsearch-with-frames.html&group=%40ToT%20-%20webkit.org
> > can we get a crash log. this webpage is inscrutable
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r102242%20(35272)/platform/mac/accessibility/search-with-frames-crash-log.txt
Unfortunately the crash log isn't helpful :( Hopefully you can reproduce this crash locally.
chris fleizach
Comment 6
2011-12-07 12:17:15 PST
(In reply to
comment #5
)
> (In reply to
comment #4
) > > (In reply to
comment #3
) > > > It seems like the test added by this patch is very crashy (~30%): > > > > > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=platform%2Fmac%2Faccessibility%2Fsearch-with-frames.html&group=%40ToT%20-%20webkit.org
> > > > can we get a crash log. this webpage is inscrutable > >
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r102242%20(35272)/platform/mac/accessibility/search-with-frames-crash-log.txt
> > Unfortunately the crash log isn't helpful :( Hopefully you can reproduce this crash locally.
Why is this crash log not useful? What leads you to believe it's this test causing the issues?
chris fleizach
Comment 7
2011-12-07 12:18:58 PST
(In reply to
comment #6
)
> (In reply to
comment #5
) > > (In reply to
comment #4
) > > > (In reply to
comment #3
) > > > > It seems like the test added by this patch is very crashy (~30%): > > > > > > > >
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=platform%2Fmac%2Faccessibility%2Fsearch-with-frames.html&group=%40ToT%20-%20webkit.org
> > > > > > can we get a crash log. this webpage is inscrutable > > > >
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r102242%20(35272)/platform/mac/accessibility/search-with-frames-crash-log.txt
> > > > Unfortunately the crash log isn't helpful :( Hopefully you can reproduce this crash locally. > > Why is this crash log not useful? > > What leads you to believe it's this test causing the issues?
Rather, I mean, why do you think this is not a real bug that needs to be fixed independent of this test
Ryosuke Niwa
Comment 8
2011-12-07 12:20:08 PST
(In reply to
comment #7
)
> (In reply to
comment #6
) > > Why is this crash log not useful? > > > > What leads you to believe it's this test causing the issues? > > Rather, I mean, why do you think this is not a real bug that needs to be fixed independent of this test
Oh, I'm not saying that we should fix the test. We should fix WebKit not to crash.
chris fleizach
Comment 9
2011-12-07 12:23:37 PST
(In reply to
comment #8
)
> (In reply to
comment #7
) > > (In reply to
comment #6
) > > > Why is this crash log not useful? > > > > > > What leads you to believe it's this test causing the issues? > > > > Rather, I mean, why do you think this is not a real bug that needs to be fixed independent of this test > > Oh, I'm not saying that we should fix the test. We should fix WebKit not to crash.
Will see if i can repro... we should open a new bug... are all the crash logs the same or are they different?
Ryosuke Niwa
Comment 10
2011-12-07 12:25:41 PST
(In reply to
comment #9
)
> Will see if i can repro... we should open a new bug... > are all the crash logs the same or are they different?
I haven't been able to figure that out. If you go to the flakiness dashboard, you can click on one of those orange bars, you can get to build result pages.
chris fleizach
Comment 11
2011-12-08 09:23:10 PST
(In reply to
comment #10
)
> (In reply to
comment #9
) > > Will see if i can repro... we should open a new bug... > > are all the crash logs the same or are they different? > > I haven't been able to figure that out. If you go to the flakiness dashboard, you can click on one of those orange bars, you can get to build result pages.
We have a bug for this with a reasonable looking backtrace
https://bugs.webkit.org/show_bug.cgi?id=74093
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug