AX: web search mechanism does not work with frames https://bugs.webkit.org/show_bug.cgi?id=73836

Reviewed by Beth Dakin.

Source/WebCore:

This allows searching for, and within, frames for elements using the accessibility
search mechanism.

Test: platform/mac/accessibility/search-with-frames.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isAccessibilityObjectSearchMatch):
(WebCore::appendAccessibilityObject):
(WebCore::appendChildrenToArray):

LayoutTests:

* platform/mac/accessibility/search-with-frames-expected.txt: Added.
* platform/mac/accessibility/search-with-frames.html: Added.



Canonical link: https://commits.webkit.org/90504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102049 268f45cc-cd09-0410-ab3c-d52691b4dbfc